# SparseDirectMethod

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SparseDirectMethod.cpp  SparseDirectMethod.h  build.sh  correct_sparse_solver.cpp  correctness_test.cpp  demo_test.cpp  fem_test.cpp  final_correct_demo.cpp  large_test.cpp  multifrontal_test.cpp  parallel_test.cpp  project_outline.md  test  test.cpp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: api.md  build_and_run.md  performance.md  user_guide.md
examples/: CMakeLists.txt  basic_usage.cpp
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  SparseDirectMethod.cpp  SparseDirectMethod.h
src/core/factorization/: CMakeLists.txt  lu_factorization.cpp  lu_factorization.hpp
src/core/matrix/: CMakeLists.txt  csr_matrix.cpp  csr_matrix.hpp  dense_matrix.cpp  dense_matrix.hpp  sparse_matrix.hpp
src/core/solver/: CMakeLists.txt  eliminationTree.hpp  linear_solver.cpp  linear_solver.hpp  multifrontal_solver.hpp
src/examples/: CMakeLists.txt
src/multifrontal/: CMakeLists.txt  MultifrontalMethod.cpp  MultifrontalMethod.h  ParallelMultifrontalMethod.cpp  ParallelMultifrontalMethod.h
src/parallel/: parallel_utils.cpp  parallel_utils.hpp
src/performance/: CMakeLists.txt  profiler.cpp  profiler.hpp
src/supernodal/: CMakeLists.txt  SupernodalMethod.cpp  SupernodalMethod.h
src/utils/: CMakeLists.txt  io_utils.cpp  io_utils.hpp
